--- a/_layouts/resume_page.html
+++ b/_layouts/resume_page.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<article class="page">
+<article class="resumepage">
 
-  <h1>{{ page.title }}</h1>
+  <h2>page.title</h2>
 
   <div class="entry">
     {{ content }}
