--- a/_layouts/resume_page.html
+++ b/_layouts/resume_page.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="resume_page">
 
-  <h2>page.title</h2>
+  <h2>{{ page.title }}</h2>
 
   <div class="entry">
     {{ content }}
