--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="page">
 
-  <h3 style="text-align: left;">{{ page.title }}</h3>
+  <h1>{{ page.title }}</h1>
 
   <div class="entry">
     {{ content }}
