--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
             </div>
 
             <nav>
-              <a href="{{ site.baseurl }}/getting-started">Resume</a>
+              <a href="{{ site.baseurl }}/resume">Resume</a>
               <a href="{{ site.baseurl }}/search">Portfolio</a>
               <a href="{{ site.baseurl }}/">Blog</a>
               <a href="{{ site.baseurl }}/about">About</a>
